--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -24,6 +24,6 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
-        image: public.ecr.aws/j1r0q0g6/training/tf-operator
+        image: quay.io/ibm/kubeflow-tf-operator-ppc64le
         name: tf-job-operator
       serviceAccountName: tf-job-operator
